2008-11-02  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/37991
	* tree-ssa-sccvn.h (copy_vuses_from_stmt): Remove.
	* tree-ssa-sccvn.c (copy_vuses_from_stmt): Make static.
	(set_ssa_val_to): Print if the value changed.
	(simplify_binary_expression): Strip useless conversions.

	* gcc.c-torture/compile/pr37991.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@141532 138bc75d-0d04-0410-961f-82ee72b054a4